@@ -33,15 +33,15 @@
 
 #define ppi_claim(fd)                                        \
   if (ioctl(fd, PPCLAIM)) {                                  \
-    avrdude_message("%s: can't claim device \"%s\": %s\n\n", \
+    avrdude_message(MSG_INFO, "%s: can't claim device \"%s\": %s\n\n", \
             progname, port, strerror(errno));                \
     close(fd);                                               \
-    return;                                                 \
+    return;                                                  \
   }
 
 #define ppi_release(fd)                                      \
   if (ioctl(fd, PPRELEASE)) {                                \
-    avrdude_message("%s: can't release device: %s\n\n",      \
+    avrdude_message(MSG_INFO, "%s: can't release device: %s\n\n", \
             progname, strerror(errno));                      \
   }
 
